descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2014-XX-XX  Release 7.26.XX                                    ---
----------------------------------------------------------------------

* improved behavior of MGED's draw command - Ștefan Mirea
* fixed handling of extra whitespace in nirt commands - Ștefan Mirea
* fixed texture mapping crash with bad image dimensions - Ștefan Mirea
* fixed g2asc and asc2g handling of dsp primitive - Cliff Yapp
* rewrote gdiff with improved output & reporting options - Cliff Yapp
* fixed pix-ps -S -W -N output size options being ignored - Carl Moore
* fixed crash exporting mixed mode merged BoT meshes - Sean Morrison
* fixed submodel primitive crash - Cliff Yapp, Sean Morrison
* support non-.g file import in Archer's file open dialog - Cliff Yapp
* added brep support to g2asc and asc2g - Cliff Yapp
* fixed a CPU affinity locking bug on Linux platforms - Sean Morrison
* fixed mged -c crash running view-modifying commands - Sean Morrison
* improved kill, killall, killtree documentation - Sean Morrison
* added killtree -f force flag to kill unconditionally - Sean Morrison
* killtree now defaults to skipping referenced objects - Sean Morrison
* nirt -h option is now help, old -h is -H - Carl Moore
* implemented preliminary NURBS geometry Boolean evaluation
	- Wu Jianbang, Nick Reed, Cliff Yapp
* improved step-g assembly hierarchy import support - Keith Bowman
* fixed rtweight when using the -G grid spacing option - Sean Morrison
* fixed memory leaks in a number of pix utilities - Cezar Elnazi
* improved NURBS ray tracing & tessellation robustness - Keith Bowman
* improved step-g NURBS geometry import robustness - Keith Bowman
* added -v verbose output option to MGED 'search' command - Cliff Yapp
* fixed g_lint and pixcount red-black tree memory leaks - Tom Browder