@@ -712,8 +712,6 @@ rt_tcl_setup(Tcl_Interp *interp)
 
     Tcl_LinkVar(interp, "rt_bot_tri_per_piece",
 		(char *)&rt_bot_tri_per_piece, TCL_LINK_WIDE_INT);
-
-    Tcl_LinkVar(interp, "rt_bot_mintie", (char *)&rt_bot_mintie, TCL_LINK_WIDE_INT);
 }
 
 
