@@ -85,33 +85,6 @@ bot_minpieces(char *buffer, com_table *UNUSED(ctp), struct rt_i *UNUSED(rtip))
 }
 
 void
-bot_mintie(char *buffer, com_table *UNUSED(ctp), struct rt_i *UNUSED(rtip))
-{
-    long new_lvalue;
-    int i=0;
-
-    while (isspace((int)*(buffer+i)))
-	++i;
-    if (*(buffer+i) == '\0') {
-	/* display current rt_bot_mintie */
-	bu_log("rt_bot_mintie = %zu\n", rt_bot_mintie);
-	return;
-    }
-
-    new_lvalue = atol(buffer);
-
-    if (new_lvalue < 0) {
-	bu_log("Error: rt_bot_mintie cannot be less than 0\n");
-	return;
-    }
-
-    if ((size_t)new_lvalue != rt_bot_mintie) {
-	rt_bot_mintie = (size_t)new_lvalue;
-	need_prep = 1;
-    }
-}
-
-void
 az_el(char *buffer, com_table *ctp, struct rt_i *UNUSED(rtip))
 {
     extern int str_dbl();  /* function to convert string to double */
